VFS-7408 Fix vertical alignment in small power selectors

--- a/app/styles/ember-power-select-config.scss
+++ b/app/styles/ember-power-select-config.scss
@@ -129,6 +129,15 @@ $ember-power-select-option-small-padding: $ember-power-select-option-small-paddi
     }
   }
 }
+.small.ember-power-select-trigger {
+  display: flex; 
+  align-items: center;
+  .ember-power-select-selected-item {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
 
 .ember-power-select-trigger {
   padding-left: $ember-power-select-option-large-padding-horizontal;
